@@ -269,6 +269,7 @@ Scroll down to the bottom to see the most recent changes.
 
 * Release 2009-03-23
 
+  - Hid-mouse example used settings from hid-data example, fixed that.
   - Renamed project to V-USB due to a trademark issue with Atmel(r).
   - Changed CommercialLicense.txt and USBID-License.txt to make the
     background of USB ID registration clearer.
